# UltimateScraper

./: README.md  pyproject.toml  requirements.txt
configs/: job_wine.yaml
scripts/: annotate_wine_slots.py  build_seq2seq_dataset.py  debug_single_url.py  run_job.py  run_job_mp.py
src/ultimate_crawler/config/: loader.py
src/ultimate_crawler/core/: job_runner.py  metrics.py  utils.py
src/ultimate_crawler/crawl/: fetcher.py  frontier.py  html_storage.py  links.py  parser.py  playwright_fetcher.py  robots.py  scheduler.py
src/ultimate_crawler/dataset/: __init__.py  builder.py
src/ultimate_crawler/discovery/: domain_selector.py  search_api.py
src/ultimate_crawler/distributed/: __init__.py  pool_runner.py
src/ultimate_crawler/io/: logging_setup.py  writers.py
src/ultimate_crawler/ner/: __init__.py  slot_extractor.py
src/ultimate_crawler/relevance/: clfdoc_filter.py  clfdoc_model.py  embedding_filter.py  embedding_model.py  keyword_filter.py  language.py
